*SVN*

* Fixed that to_xml should not automatically pass :procs to associations included with :include #10162 [chuyeow]

* Fix documentation typo introduced in [8250]. Closes #10339 [Henrik N]


*2.0.0 [RC2]* (November 28th, 2007)

* Foxy fixtures: support single-table inheritance.  #10234 [tom]

* Foxy fixtures: allow mixed usage to make migration easier and more attractive.  #10004 [lotswholetime]

* Make the record_timestamps class-inheritable so it can be set per model.  #10004 [tmacedo]

* Allow validates_acceptance_of to use a real attribute instead of only virtual (so you can record that the acceptance occured) #7457 [ambethia]

* DateTimes use Ruby's default calendar reform setting. #10201 [Geoff Buesing]

* Dynamic finders on association collections respect association :order and :limit.  #10211, #10227 [Patrick Joyce, Rick Olson, Jack Danger Canty]

* Add 'foxy' support for fixtures of polymorphic associations. #10183 [jbarnette, David Lowenfels]

* validates_inclusion_of and validates_exclusion_of allow formatted :message strings.  #8132 [devrieda, Mike Naberezny]

* attr_readonly behaves well with optimistic locking.  #10188 [Nick Bugajski]

* Base#to_xml supports the nil="true" attribute like Hash#to_xml.  #8268 [Catfish]

* Change plings to the more conventional quotes in the documentation. Closes #10104 [danger]

* Fix HasManyThrough Association so it uses :conditions on the HasMany Association.  Closes #9729 [danger]

* Ensure that column names are quoted.  Closes #10134 [wesley.moxam]

* Smattering of grammatical fixes to documentation. Closes #10083 [BobSilva]

* Enhance explanation with more examples for attr_accessible macro. Closes #8095 [fearoffish, Marcel Molina]

* Update association/method mapping table to refected latest collection methods for has_many :through. Closes #8772 [lifofifo]

* Explain semantics of having several different AR instances in a transaction block. Closes #9036 [jacobat, Marcel Molina]
